--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
   ],
   "homepage": "http://www.layui.com/admin/",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
     "chai": "^4.1.1",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.1",
     "gulp-concat": "^2.6.0 ",
     "gulp-header": "^1.8.8",
     "gulp-if": "^2.0.1",
